# agent-gateway

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  errors.rs  lib.rs  main.rs  routes.rs  tests.rs
src/handlers/: check_access.rs  mod.rs
src/utils/: jwt.rs  mod.rs  scopes.rs
tests/: core.rs
